--- a/manifest.json
+++ b/manifest.json
@@ -2,21 +2,21 @@
   "name": "Calculadora Center Hogar",
   "short_name": "Calculadora",
   "description": "Calculadora de Center Hogar",
-  "start_url": "calculadora.html",
+  "scope": "/catalogo/",
+  "start_url": "/catalogo/calculadora.html",
   "display": "standalone",
   "background_color": "#e0eafc",
   "theme_color": "#667eea",
   "icons": [
     {
-      "src": "./images/logo_192.png",
+      "src": "/catalogo/images/logo_192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./images/logo_512.png",
+      "src": "/catalogo/images/logo_512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "scope": "."
+  ]
 }
