--- a/manifest.json
+++ b/manifest.json
@@ -5,18 +5,22 @@
   "scope": "/catalogo/",
   "start_url": "/catalogo/calculadora.html",
   "display": "standalone",
-  "background_color": "#e0eafc",
-  "theme_color": "#667eea",
+  "display_override": ["window-controls-overlay"],
+  "background_color": "#ECF0F1",
+  "theme_color": "#2C3E50",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/catalogo/images/logo_192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable any"
     },
     {
       "src": "/catalogo/images/logo_512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable any"
     }
   ]
 }
